cmake_minimum_required(VERSION 3.8)
project(nuslam)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(std_srvs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nuturtlebot_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(turtlelib REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(nuturtle_control REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(Armadillo REQUIRED)

add_executable(slam src/slam.cpp)
add_executable(landmarks src/landmarks.cpp)

include_directories(
  ${ARMADILLO_INCLUDE_DIRS}
)

ament_target_dependencies(
  slam
  rclcpp
  std_msgs
  geometry_msgs
  nuturtlebot_msgs
  sensor_msgs
  tf2
  tf2_ros
  nav_msgs
  nuturtle_control
  visualization_msgs
  Armadillo
)

ament_target_dependencies(
  landmarks
  rclcpp
  std_msgs
  geometry_msgs
  nuturtlebot_msgs
  sensor_msgs
  tf2
  tf2_ros
  nav_msgs
  nuturtle_control
  visualization_msgs
  Armadillo
)

target_link_libraries(slam turtlelib::turtlelib ${ARMADILLO_LIBRARIES})
target_link_libraries(landmarks turtlelib::turtlelib ${ARMADILLO_LIBRARIES})

install(TARGETS
  slam
  landmarks
  DESTINATION lib/${PROJECT_NAME})

# Install directories
install(DIRECTORY
  launch
  config
  DESTINATION share/nuslam/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
